--- a/lib/commands/imprimircapa.sty
+++ b/lib/commands/imprimircapa.sty
@@ -9,10 +9,11 @@
 		% Todos os elementos da capa devem esta em negrito
 		\bfseries
 
-        \includegraphics[height=2.5cm]{assets/logo-fametro.png} \\
+        \includegraphics[width=5cm]{assets/logo-fametro.png} \\
         \vspace{0.1cm}
 		\MakeUppercase{\capaIes} \\
-		\MakeUppercase{\capaCurso} \\
+		\MakeUppercase{\capaCursoLinhaUm} \\
+		\MakeUppercase{\capaCursoLinhaDois} \\
 
 		\vspace{3cm}
 
