--- a/variables/capa.tex
+++ b/variables/capa.tex
@@ -3,4 +3,5 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \def \capaIes {Faculdade Metropolitana da Grande Fortaleza}
-\def \capaCurso {Curso de Gradução Tecnológica em Análise e Desenvolvimento de Sistemas}
+\def \capaCursoLinhaUm {Curso de Gradução Tecnológica em}
+\def \capaCursoLinhaDois {Análise e Desenvolvimento de Sistemas}
