--- a/lib/commands/imprimircapa.sty
+++ b/lib/commands/imprimircapa.sty
@@ -11,7 +11,7 @@
 
         \includegraphics[width=5cm]{assets/logo-fametro.png} \\
         \vspace{0.1cm}
-		\MakeUppercase{\capaIes} \\
+		\MakeUppercase{\iesNome} \\
 		\MakeUppercase{\capaCursoLinhaUm} \\
 		\MakeUppercase{\capaCursoLinhaDois} \\
 
