--- a/lib/main.tex
+++ b/lib/main.tex
@@ -72,3 +72,4 @@
 
 % Importações de pacotes - Fametro Comandos
 \usepackage{lib/commands/imprimircapa}
+\usepackage{lib/commands/imprimirfolhaderosto}
