--- a/documento.tex
+++ b/documento.tex
@@ -58,5 +58,8 @@
     
     % Folha de Rosto
     \imprimirfolhaderosto{}
+    
+    % Resumo
+    \imprimirresumo{content/pre-textuais/resumo}
 
 \end{document}
