--- a/lib/main.tex
+++ b/lib/main.tex
@@ -39,13 +39,13 @@
 
 % Importações de pacotes - Básicos
 % \usepackage{lmodern}			% Usa a fonte Latin Modern		
-\usepackage{mathptmx}                               % Usa a fonte Times New Roman
+\usepackage{mathptmx}           % Usa a fonte Times New Roman
 \usepackage[T1]{fontenc}		% Selecao de codigos de fonte.
 \usepackage[utf8]{inputenc}		% Codificacao do documento (conversão automática dos acentos)
 \usepackage{indentfirst}		% Indenta o primeiro parágrafo de cada seção.
 \usepackage{color}				% Controle das cores
 \usepackage{graphicx}			% Inclusão de gráficos
-\usepackage{microtype} 			% para melhorias de justificação
+% \usepackage{microtype} 			% para melhorias de justificação
 
 % Importações de pacotes - Canônicos abnTeX2
 \usepackage{lipsum}				% Geração de dummy text
@@ -59,7 +59,6 @@
 \usepackage{booktabs}                               % Comandos para tabelas
 \usepackage{verbatim}                               % Texto é interpretado como escrito no documento
 \usepackage{multirow, array}                        % Múltiplas linhas e colunas em tabelas
-\usepackage{indentfirst}                            % Identa o primeiro parágrafo de cada seção.
 \usepackage{listings}                               % Utilizar código fonte no documento
 \usepackage{microtype}                              % Para melhorias de justificação?
 \usepackage{tocloft}                                % Permite alterar a formatação do Sumário
@@ -69,7 +68,3 @@
 
 % Importações de pacotes - Fametro
 \usepackage{lib/pifametrotex2}           % Formato da Fametro
-
-% Importações de pacotes - Fametro Comandos
-\usepackage{lib/commands/imprimircapa}
-\usepackage{lib/commands/imprimirfolhaderosto}
