--- a/lib/pifametrotex2.sty
+++ b/lib/pifametrotex2.sty
@@ -85,3 +85,108 @@
 % Estilo da subsection 1.1.1.1
 \renewcommand{\ABNTEXsubsubsubsectionfont}{\normalfont\itshape}
 \renewcommand{\ABNTEXsubsubsubsectionfontsize}{\normalsize}
+
+% Margen da legenda da figura e da tabela
+\captionsetup{
+	justification=centering,% Centraliza o caption
+	skip=0pt,                %Retira o espaco entre a figura/tabela e o caption
+	labelfont=bf, % A palavra 'Figure 1' agora eh negrito
+	font=bf	% O texto depois de 'Figure 1' agora eh negrito
+}
+
+% Os items da lista de figura agora sao negritos
+\renewcommand{\cftfigurefont}{\bfseries}
+
+% Os items da lista de tabela e quadro agora sao negritos
+\renewcommand{\cfttablefont}{\bfseries}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%              Comandos               %%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%%%%%%%%%%%%%%% CAPA 
+
+\renewcommand{\imprimircapa}{%
+	% Toda capa deve ter pagina 0
+	\setcounter{page}{0}
+	
+	\begin{capa}%
+		% Todos os elementos da capa devem esta centralizado
+		\center
+		
+		% Todos os elementos da capa devem esta em negrito
+		\bfseries
+
+        \includegraphics[width=5cm]{assets/logo-fametro.png} \\
+        \vspace{0.1cm}
+		\MakeUppercase{\iesNome} \\
+		\MakeUppercase{\capaCursoLinhaUm} \\
+		\MakeUppercase{\capaCursoLinhaDois} \\
+
+		\vspace{3cm}
+
+		\MakeUppercase{\imprimirautor}
+		
+		\vspace{5cm}
+		
+		\MakeUppercase{\imprimirtitulo}
+		
+		\vfill
+		\normalsize\MakeUppercase\imprimirlocal\par	
+		\normalsize\imprimirdata
+	\end{capa}%	
+}
+
+%%%%%%%%%%%%%%% FOLHA DE ROSTO
+
+\makeatletter
+\renewcommand{\folhaderostocontent}{%
+    \begin{center}
+		\normalsize\MakeUppercase\imprimirautor\par
+		\vspace{6.5cm}
+		\normalsize\MakeUppercase\imprimirtitulo\par
+	\end{center}
+	
+	\vspace{2.5cm}
+	
+	%Retira o espaço do parágrafo
+	\hspace*{-2cm}
+	
+	%Adiciona o espaço da margem
+	\hspace*{8cm}	
+	
+	\raggedleft
+	
+	\begin{minipage}{8cm}
+		\begin{SingleSpace}
+		    \imprimirpreambulo
+		\end{SingleSpace}		
+	\end{minipage}
+	
+	\vfill
+	\centering
+	\normalsize\MakeUppercase\imprimirlocal\par	
+	\normalsize\imprimirdata
+}
+\makeatother
+
+%%%%%%%%%%%%%%% RESUMO
+
+\newcommand{\fixindent}{
+    \parindent 2cm
+    \indent
+}
+
+\newcommand{\imprimirresumo}[1]{
+	\begin{resumo}[Resumo] %
+		{\fixindent\input{#1}}
+	\end{resumo}
+}
+
+\newcommand{\palavraschave}[1]{
+	\vspace{\onelineskip} 
+	\noindent Palavras-chave: #1
+	\hypersetup{%
+		pdfborder = {0 0 0}
+	}
+}
