--- a/content/textuais/exemplo.tex
+++ b/content/textuais/exemplo.tex
@@ -8,8 +8,9 @@
 \section{Seção de Exemplo}
 \label{sec:exemplo}
 
-\lipsum[3]
-\lipsum[4]
+Segundo \cite{citacaoLamport} você não deve esquecer de adicionar citações ao arquivo.bib, conforme esse exemplo de citação.
+
+\lipsum[2]
 
 \subsection{Subseção de Exemplo}
 \label{sec:exemplo-exemplo}
