--- a/content/textuais/objetivos.tex
+++ b/content/textuais/objetivos.tex
@@ -2,9 +2,9 @@
 \label{cap:objetivos}
 
 \section{Objetivo Geral}
-\label{sec:objetivo-geral}
+\label{sec:objetivos-geral}
 
-Integer imperdiet ac magna eu pulvinar. Aliquam erat volutpat. Etiam molestie, nulla a egestas aliquet, velit augue congue metus, et ultricies metus massa vel nibh. Vivamus viverra commodo finibus. Nam elementum convallis accumsan. Quisque tincidunt purus nisl, tincidunt ultricies odio ultrices eu.
+Na seção \ref{sec:objetivos-especificos} iremos ver detalhadamente. Integer imperdiet ac magna eu pulvinar. Aliquam erat volutpat. Etiam molestie, nulla a egestas aliquet, velit augue congue metus, et ultricies metus massa vel nibh. Vivamus viverra commodo finibus. Nam elementum convallis accumsan. Quisque tincidunt purus nisl, tincidunt ultricies odio ultrices eu.
 
 \section{Objetivos Específicos}
 \label{sec:objetivos-especificos}
