--- a/documento.tex
+++ b/documento.tex
@@ -70,5 +70,8 @@
     \input{content/textuais/introducao}
     \input{content/textuais/objetivos}
     \input{content/textuais/exemplo}
+    
+    % Referências
+    \imprimirreferencias{content/pos-textuais/referencias}
 
 \end{document}
