--- a/lib/main.tex
+++ b/lib/main.tex
@@ -45,7 +45,7 @@
 \usepackage{indentfirst}		% Indenta o primeiro parágrafo de cada seção.
 \usepackage{color}				% Controle das cores
 \usepackage{graphicx}			% Inclusão de gráficos
-% \usepackage{microtype} 			% para melhorias de justificação
+\usepackage{microtype} 			% para melhorias de justificação
 
 % Importações de pacotes - Canônicos abnTeX2
 \usepackage{lipsum}				% Geração de dummy text
