--- a/documento.tex
+++ b/documento.tex
@@ -87,7 +87,11 @@
     \textual
     \input{content/textuais/introducao}
     \input{content/textuais/objetivos}
+    \input{content/textuais/referencial-teorico}
+    \input{content/textuais/metodologia}
     \input{content/textuais/exemplo}
+    \input{content/textuais/resultados-e-discussao}
+    \input{content/textuais/consideracoes-finais}
 
     % Referências
     \imprimirreferencias{content/pos-textuais/referencias}
