--- a/content/pos-textuais/referencias.bib
+++ b/content/pos-textuais/referencias.bib
@@ -1,72 +1,60 @@
-@article{citacaoLamport,
+%% book
+%% inbook
+%% hidden
+%% article
+%% manual
+
+@book{citacaoLamport,
     title={LaTEX: User's Guide \& Reference Manual},
     author={Lamport, Leslie},
     year={1986},
     publisher={Addison-Wesley}
 }
 
-@article{quatroautores,
-	title={Real-time prediction of hand trajectory 
-	by ensembles of cortical neurons in primates},
-	author={Wessberg, Johan and Stambaugh, Christopher R and 
-	Kralik,Jerald D and 
-	Beck, Pamela D and Laubach, Mark and 
-	Chapin, John K and Kim, Jung and Biggs, S James and 
-	Srinivasan, Mandayam A and Nicolelis, Miguel AL},
-	journal={Nature},
-	volume={408},
-	number={6810},
-	pages={361--365},
-	year={2000},
-	publisher={Nature Publishing Group}
+@book{citeSiteManifestoAgil,
+    title={Manifesto para Desenvolvimento Ágil de Softwares},
+    author={Kent Beck and Mike Beedle and Arie Bennekum and Alistair Cockburn and Ward Cunningham and Martin Fowler and James Grenning and Jim Highsmith and Andrew Hunt and Ron Jeffries and Jon Kern and Brian Marick and Robert C. Martin and Steve Mellor and Ken Schwaber and Jeff Sutherland and Dave Thomas},
+    url={http://agilemanifesto.org/iso/ptbr/manifesto.html},
+    urlaccessdate={11 set. 2018},
+    year={2018}
 }
 
-@book{knuth,
-	title={The texbook},
-	author={Knuth, D.E. and Bibby, D. and Makai, I.},
-	volume={1993},
-	year={1986},
-	publisher={Addison-Wesley}
+@book{citePlanningPokerByJammesGrenning,
+    title={Planning Poker or How to avoid analysis paralysis while release planning},
+    author={James W. Grenning},
+    url={https://wingman-sw.com/papers/PlanningPoker-v1.1.pdf},
+    urlaccessdate={20 set. 2018},
+    year={2002}
 }
 
-@misc{lamport,
-	title={Document Preparation System},
-	author={Lamport, L. and LaTEX, A.},
-	year={1994},
-	publisher={Addison-Wesley}
+@book{citeJurandirSobreKanban,
+    title={Administração da Produção: Operações Industriais e de Serviços},
+    author={Jurandir Peinado, Alexandre Reis Graeml},
+    year={2007},
+    publisher={UnicenP},
+    pages={449},
+    address={Curitiba: PR}
 }
 
-@MASTERSTHESIS{Maia2011,
-	author = { BORGES, J. A. M.},
-	TITLE = {Estudo da drogadição gestacional e óbito neonatal},
-	SCHOOL = {Universidade Estadual do Ceará, Fortaleza},
-	YEAR = {2012},
-	type = {Mestrado},
+@book{citeEstudoStateOfAmericanWorkplace,
+    title={State of the American Workplace},
+    author={GALLUP},
+    url={https://news.gallup.com/reports/199961/7.aspx},
+    urlaccessdate={11 set. 2018},
+    year={2018}
 }
 
-@article{mortalidade,
-	title={Mortalidade neonatal: fatores de risco em um município no sul do Brasil},
-	author={MARAM, E. and UCHIMURA, T. T.},
-	journal={Rev. Eletr. Enf.},
-	volume={10},
-	number={1},
-	pages={29-38},
-	year={2008},
+@book{citePesquisaFuturoTrabalho,
+    title={Dados de pesquisa: o futuro do trabalho é remoto?},
+    author={Matheus Souza},
+    url={https://transformacaodigital.com/dados-de-pesquisa-o-futuro-do-trabalho-e-remoto},
+    urlaccessdate={11 set. 2018},
+    year={2018}
 }
 
-@inproceedings{Huetal2000,
-	author = "J. Hu and H.R. Wu and A. Jennings and X. Wang",
-	title = "Fast and robust equalization: A case study",
-	booktitle = "Proceedings of the World Multiconference on Systemics, Cybernetics and Informatics, (SCI 2000), Florida, USA, 23-26 July 2000",
-	publisher = "International Institute of Informatics and Systemics", 
-	address = "FL, USA",
-	pages = "398--403",
-	year = "2000"
-}
-
-@book{tresautores,
-	title={Resiliência: enfatizando a proteção dos 	adolescentes},
-	author={ASSIS, S. G and  AVANCI, J. Q. and PESCE, R. P.},
-	year={2005},
-	address={Porto Alegre: Artmed},
+@book{citeHistoriasDeUsuarios,
+    title={Engenharia de Requisitos: Software Orientado ao Negócio},
+    author={Carlos Eduardo Vazquez, Guilherme Siqueira Simões},
+    publibsher={Brasport},
+    year={2016}
 }
