[Feat] Watermark adicionada

--- a/documento.tex
+++ b/documento.tex
@@ -71,6 +71,9 @@
 \begin{document}
     \selectlanguage{brazil}
 
+    % Adicionar marca d'água
+    % \printWatermark
+
     % Capa
     \imprimircapa
 
