--- a/lib/main.tex
+++ b/lib/main.tex
@@ -69,7 +69,8 @@
 \usepackage{etoolbox}                               % Usado para alterar a fonte da Section no Sumário
 % \usepackage[nogroupskip,nonumberlist,acronym]{glossaries}   % Permite fazer o glossario
 \usepackage{caption}                                % Altera o comportamento da tag caption
-\usepackage{ifthen}                                 % Inclui condicionais
+\usepackage{xcolor}                                 % Cores
+\usepackage[printwatermark]{xwatermark}             % Marca d'água de rascunho
 
 % Importações de pacotes - Fametro
 \usepackage{lib/pifametrotex2}          % Formato da Fametro
