--- a/lib/pifametrotex2.sty
+++ b/lib/pifametrotex2.sty
@@ -242,3 +242,8 @@
 \newcommand{\MinhaFigura}[2]{
     \Figura{#1}{#2}{Elaborado pelo autor}
 }
+
+% Comando para marca d'água
+\newcommand{\printWatermark}{
+    \newwatermark[allpages,color=red!5,angle=45,scale=2]{RASCUNHO RASCUNHO RASCUNHO RASCUNHO RASCUNHO RASCUNHO RASCUNHO RASCUNHO RASCUNHO RASCUNHO RASCUNHO RASCUNHO RASCUNHO RASCUNHO RASCUNHO RASCUNHO RASCUNHO RASCUNHO RASCUNHO RASCUNHO RASCUNHOs}
+}
