--- a/lib/main.tex
+++ b/lib/main.tex
@@ -56,7 +56,7 @@
 
 % Importações de pacotes - Citações
 \usepackage[brazilian,hyperpageref]{backref}                                                                                % Paginas com as citações
-\usepackage[alf,abnt-emphasize=bf,bibjustif,recuo=0cm,abnt-etal-cite=3,abnt-etal-list=3,abnt-etal-text=it]{abntex2cite}     % Citações padrão ABNT
+\usepackage[alf,abnt-emphasize=bf,bibjustif,recuo=0cm,abnt-etal-cite=1,abnt-etal-list=3,abnt-etal-text=it]{abntex2cite}     % Citações padrão ABNT
 
 % Importações de pacotes - Misc
 \usepackage{amsfonts, amssymb, amsmath}             % Fonte e símbolos matemáticos
@@ -70,6 +70,7 @@
 % \usepackage[nogroupskip,nonumberlist,acronym]{glossaries}   % Permite fazer o glossario
 \usepackage{caption}                                % Altera o comportamento da tag caption
 \usepackage{xcolor}                                 % Cores
+\usepackage{xspace}                                 % Espaços
 \usepackage[printwatermark]{xwatermark}             % Marca d'água de rascunho
 
 % Importações de pacotes - Fametro
