[Feat] Melhorias no sumário, seção 1.1.1.1.1 e formatação geral

--- a/lib/main.tex
+++ b/lib/main.tex
@@ -49,7 +49,7 @@
 \usepackage{indentfirst}        % Indenta o primeiro parágrafo de cada seção.
 \usepackage{color}              % Controle das cores
 \usepackage{graphicx}           % Inclusão de gráficos
-\usepackage{microtype}          % para melhorias de justificação
+\usepackage{microtype}          % Para melhorias de justificação
 
 % Importações de pacotes - Canônicos abnTeX2
 \usepackage{lipsum}             % Geração de dummy text
@@ -70,7 +70,7 @@
 % \usepackage[nogroupskip,nonumberlist,acronym]{glossaries}   % Permite fazer o glossario
 \usepackage{caption}                                % Altera o comportamento da tag caption
 \usepackage{xcolor}                                 % Cores
-\usepackage{xspace}                                 % Espaços
+\usepackage{xspace}                                 % Cores
 \usepackage[printwatermark]{xwatermark}             % Marca d'água de rascunho
 
 % Importações de pacotes - Fametro
