[Feat] Melhorias dos exemplos

--- a/content/pos-textuais/referencias.bib
+++ b/content/pos-textuais/referencias.bib
@@ -1,60 +1,27 @@
-%% book
-%% inbook
-%% hidden
-%% article
-%% manual
-
-@book{citacaoLamport,
-    title={LaTEX: User's Guide \& Reference Manual},
-    author={Lamport, Leslie},
-    year={1986},
-    publisher={Addison-Wesley}
+@book{exemplodelivro,
+    title={Livro de Exemplo},
+    subtitle={Subtítulo, se houver},
+    author={Alberto Fulano and Marcos Cricano},
+    year={2018},
+    address={Fortaleza, Brasil},
+    publisher={Fametro}
 }
 
-@book{citeSiteManifestoAgil,
-    title={Manifesto para Desenvolvimento Ágil de Softwares},
-    author={Kent Beck and Mike Beedle and Arie Bennekum and Alistair Cockburn and Ward Cunningham and Martin Fowler and James Grenning and Jim Highsmith and Andrew Hunt and Ron Jeffries and Jon Kern and Brian Marick and Robert C. Martin and Steve Mellor and Ken Schwaber and Jeff Sutherland and Dave Thomas},
-    url={http://agilemanifesto.org/iso/ptbr/manifesto.html},
-    urlaccessdate={11 set. 2018},
-    year={2018}
+@article{exemplodesite,
+    title={Nome do Artigo, Texto, Post ou Seção},
+    author={Márcio Fulano and João Beltrano and Antônio Cicrano and Etal Nessa},
+    url={http://exemplo.com.br/exemplo.html},
+    journal={Nome do Portal},
+    urlaccessdate={02 jan. 2018},
+    year={2012}
 }
 
-@book{citePlanningPokerByJammesGrenning,
-    title={Planning Poker or How to avoid analysis paralysis while release planning},
-    author={James W. Grenning},
-    url={https://wingman-sw.com/papers/PlanningPoker-v1.1.pdf},
-    urlaccessdate={20 set. 2018},
-    year={2002}
-}
-
-@book{citeJurandirSobreKanban,
-    title={Administração da Produção: Operações Industriais e de Serviços},
-    author={Jurandir Peinado, Alexandre Reis Graeml},
-    year={2007},
-    publisher={UnicenP},
-    pages={449},
-    address={Curitiba: PR}
-}
-
-@book{citeEstudoStateOfAmericanWorkplace,
-    title={State of the American Workplace},
-    author={GALLUP},
-    url={https://news.gallup.com/reports/199961/7.aspx},
-    urlaccessdate={11 set. 2018},
-    year={2018}
-}
-
-@book{citePesquisaFuturoTrabalho,
-    title={Dados de pesquisa: o futuro do trabalho é remoto?},
-    author={Matheus Souza},
-    url={https://transformacaodigital.com/dados-de-pesquisa-o-futuro-do-trabalho-e-remoto},
-    urlaccessdate={11 set. 2018},
-    year={2018}
-}
-
-@book{citeHistoriasDeUsuarios,
-    title={Engenharia de Requisitos: Software Orientado ao Negócio},
-    author={Carlos Eduardo Vazquez, Guilherme Siqueira Simões},
-    publibsher={Brasport},
-    year={2016}
+@article{exemploartigo,
+    title={Título do Estudo do Artigo de Exemplo},
+    journal={Jornal de Exemplo para Publicação},
+    author={Júlio Fulano},
+    year={2018},
+    volume={12},
+    number={2},
+    pages={100-103}
 }
