--- a/content/textuais/exemplo.tex
+++ b/content/textuais/exemplo.tex
@@ -8,12 +8,16 @@
 \section{Seção de Exemplo}
 \label{sec:exemplo}
 
-Segundo \cite{citacaoLamport} você não deve esquecer de adicionar citações ao arquivo.bib, conforme esse exemplo de citação.
+Segundo \citeonline{exemplodelivro} você não deve esquecer de adicionar citações ao arquivo.bib, conforme esse exemplo de citação. Use \textbf{citeonline} para não escrever parênteses.
 
-\lipsum[2]
+Citações com parênteses, no entanto, devem ser feitas com \textbf{cite} apenas \cite{exemploartigo}.
+
+Criamos um terceiro comando, chamado para \textbf{citeurl} para os caso de citação de página online \citeurl{exemplodesite}, lembrando que com mais de três autores, será adicionado o \textit{et al}.
+
+Por fim, não esqueça de comentar no documento essa página e deixa-la apenas como referência.s
 
 \subsection{Subseção de Exemplo}
-\label{sec:exemplo-exemplo}
+\label{subsec:exemplo-exemplo}
 
 Integer imperdiet ac magna eu pulvinar. Aliquam erat volutpat. Etiam molestie, nulla a egestas aliquet, velit augue congue metus, et ultricies metus massa vel nibh. Vivamus viverra commodo finibus. Nam elementum convallis accumsan. Quisque tincidunt purus nisl, tincidunt ultricies odio ultrices eu.
 
@@ -24,3 +28,17 @@ Integer imperdiet ac magna eu pulvinar. Aliquam erat volutpat. Etiam molestie, n
 	\item Mauris facilisis odio eu ornare tempor. Nunc dictum sed tortor nec viverra.
 	\item Curabitur convallis odio at eros consequat pretium.
 \end{alineas}
+
+\subsubsection{Subsubseção de Exemplo}
+\label{subsubsec:exemplo-exemplo-exemplo}
+
+Morbi luctus, wisi viverra faucibus pretium, nibh est placerat odio, nec commodowisi enim eget quam.  Quisque libero justo, consectetuer a, feugiat vitae, porttitor eu, libero.Suspendisse sed mauris vitae elit sollicitudin malesuada.   Maecenas ultricies eros sit ametante. Ut venenatis velit. Maecenas sed mi eget dui varius euismod. Phasellus aliquet volutpatodio.
+
+\subsubsubsection{Subsubsubseção de Exemplo}
+\label{subsubsubsec:exemplo-exemplo-exemplo-exemplo}
+
+\lipsum[12]
+\lipsum[13]
+\lipsum[14]
+
+\Figura{Título da Imagem}{exemplo.png}{Internet}
