[Feat] Adicionado pacote. Adicionado comando de citar url na linha

--- a/lib/main.tex
+++ b/lib/main.tex
@@ -72,6 +72,7 @@
 \usepackage{xcolor}                                 % Cores
 \usepackage{xspace}                                 % Cores
 \usepackage[printwatermark]{xwatermark}             % Marca d'água de rascunho
+\usepackage[section]{placeins}                      % Garante que imagens fiquem no lugar
 
 % Importações de pacotes - Fametro
 \usepackage{lib/pifametrotex2}          % Formato da Fametro
