--- a/lib/pifametrotex2.sty
+++ b/lib/pifametrotex2.sty
@@ -323,6 +323,10 @@
     (\citeauthor{#1}, \citeyear{#1}, online)\xspace
 }
 
+\newcommand{\citeurlonline}[1]{
+    \citeauthoronline{#1} (\citeyear{#1}, online)\xspace
+}
+
 \newcommand{\citeautoronline}[1]{
     \citeauthoronline{#1} (\citeyear{#1})\xspace
 }
